HOMS-329 Fix horizontal scroll in select_table nested to group

--- a/hbw/app/assets/stylesheets/hbw.sass
+++ b/hbw/app/assets/stylesheets/hbw.sass
@@ -34,7 +34,6 @@
     overflow: visible
 
   .form-group
-    display: table
     width: 100%
 
     .tooltip.right
